# clip2image-gui

./: CMakeLists.txt  README.md  clip2image-gui.cpp  makefile
.cache/clangd/index/: clip2image-gui.cpp.40ACC7626CC0CCAB.idx
